Implement POST /articles
